--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,7 +34,7 @@ jobs:
         uses: Platane/snk@v3
         id: snake-gif
         with:
-          github_user_name: ${{ github.repository_owner }}
+          github_user_name: Murilosxv
           outputs: |     
             dist/github-contribution-grid-snake.gif
             dist/github-contribution-grid-snake.svg
